--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
 	},
 	"exclude": [
 		"node_modules",
-		".vscode-test"
+		".vscode-test",
+		"**/app/index.css",
+		"**/app/index.tsx",
+		"**/app/tsconfig.json",
 	]
 }
